Fixed main section button colour contrast issue

--- a/language_acts/static/scss/main.scss
+++ b/language_acts/static/scss/main.scss
@@ -624,6 +624,15 @@ section.main {
                 fill: $secondary-color;
             }
         }
+
+        &.button {
+            color: $white;
+
+            &:hover {
+                background: $secondary-color;
+                color: $primary-color;
+            }
+        }
     }
 
     h1 {
